# castor

./: .cto_baseline  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  ANALISIS_PARA_INVERSIONISTA.md  CASTOR_Ventas_Campanas.pptx  CHANGELOG.md  CLAUDE.md  CTO_ANALYSIS_SUMMARY.md  CTO_AUDIT_REPORT.md  DASHBOARD_TEST_RESULTS.md  ERROR_OPENAI_LOG.md  FEEDBACK_DOCUMENTOS.md  FLUJO_DASHBOARD_UNIFICADO.md  GUIA_PRUEBAS_MANUALES.md  INSTRUCCIONES_ACTAS_E14.txt  MOCKUPS_DASHBOARD.md  MODELO_CASTOR_ELECCIONES.md  Makefile  OPTIMIZATION_REPORT.md  PRUEBAS_DASHBOARD.md  PRUEBAS_MEDIOS.md  QUICKSTART.md  QUICK_START.md  README.md  RESULTADOS_PRUEBAS.md  RESULTADO_PRUEBA_DASHBOARD.md  RESUMEN_FUNCIONALIDADES.md  RESUMEN_IMPLEMENTACION.md  SECURITY_REMEDIATION.md  SMOKE_TEST_README.md  SOLUCION_ERRORES_DASHBOARD.md  SOLUCION_RATE_LIMIT.md  TABLA_FUNCIONALIDADES_BENEFICIOS.md  TESTING_GUIDE.md  TEST_OPENAI_RESULT.md  TROUBLESHOOTING.md  VERCEL_DEPLOYMENT.md  descargar_actas.py  (+20 more)
actas_e14_masivo/: README.txt  descarga_directa.py  descarga_log.txt  descarga_optimizada.py  descarga_respetuosa.py  descarga_selenium_puro.py  descargador_masivo.py  descargar_desde_tokens.py  ejecutar_extraccion.py  estructura_congreso_2022.json  estructura_electoral.json  extraer_congreso_2022.py  extraer_estructura_ahora.py  instalar_y_ejecutar.sh  lista_puestos.json  progreso_descarga.json  progreso_selenium.json  selenium_congreso_2022.py  selenium_extractor.py
backend/: .env.example  API_DOCUMENTATION.md  Dockerfile  ENV_SETUP.md  FIXES_APPLIED.md  MIGRATION_GUIDE.md  README.md  README_IMPROVEMENTS.md  TEST_ENDPOINTS_README.md  check_leads.py  config.py  docker-compose.yml  e14_extraction_ac1a717b.json  gunicorn.conf.py  init_db.py  main.py  migrate_leads_table.py  setup.py  (+13 more)
(+896 files in other folders)
